Replaced all token comparison test by string comparison tests.

--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@ TODO
 * Remove deprecated \subfiglist_group_var_return:NN
 * Only define tmp and g variables globally
 * Rename svg makros to pdf_plus_tex
+* Fix width and height argument for subfiglistoverlay environment
+* Add Tikz positioning for labels
+* Allow adjusting \fboxsep for color background in labels
 
 
 
