--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -121,15 +121,12 @@
 \cs_generate_variant:Nn \char_generate:nn          { nV }
 \cs_generate_variant:Nn \seq_set_split:Nnn         { Nx }
 \cs_generate_variant:Nn \seq_gset_split:Nnn        { cxx }
-\cs_generate_variant:Nn \token_if_eq_charcode_p:NN { NV }
-\cs_generate_variant:Nn \token_if_eq_charcode:NNTF { NV }
 \cs_generate_variant:Nn \group_insert_after:N      { c }
 \cs_generate_variant:Nn \hbox_set:Nn               { NV }
 
-
-\cs_new:Npn \token_if_eq_charcode:NtTF #1 #2 #3 #4
+\prg_new_conditional:Npnn \subfiglist_str_if_eq:nt #1 #2 { p }
 {
-  \subfiglist_exp_args:NNt \token_if_eq_charcode:NNTF #1 { #2 } { #3 } { #4 }
+  \subfiglist_exp_args:Nnt \str_if_eq:nnTF { #1 } { #2 } { \prg_return_true: } { \prg_return_false: }
 }
 
 
@@ -1471,16 +1468,16 @@
     {
       \bool_if:nTF
       {
-        \token_if_eq_charcode_p:NN 0 #1 ||
-        \token_if_eq_charcode_p:NN 1 #1 ||
-        \token_if_eq_charcode_p:NN 2 #1 ||
-        \token_if_eq_charcode_p:NN 3 #1 ||
-        \token_if_eq_charcode_p:NN 4 #1 ||
-        \token_if_eq_charcode_p:NN 5 #1 ||
-        \token_if_eq_charcode_p:NN 6 #1 ||
-        \token_if_eq_charcode_p:NN 7 #1 ||
-        \token_if_eq_charcode_p:NN 8 #1 ||
-        \token_if_eq_charcode_p:NN 9 #1
+        \str_if_eq_p:nn { 0 } { #1 } ||
+        \str_if_eq_p:nn { 1 } { #1 } ||
+        \str_if_eq_p:nn { 2 } { #1 } ||
+        \str_if_eq_p:nn { 3 } { #1 } ||
+        \str_if_eq_p:nn { 4 } { #1 } ||
+        \str_if_eq_p:nn { 5 } { #1 } ||
+        \str_if_eq_p:nn { 6 } { #1 } ||
+        \str_if_eq_p:nn { 7 } { #1 } ||
+        \str_if_eq_p:nn { 8 } { #1 } ||
+        \str_if_eq_p:nn { 9 } { #1 }
       }{
         \prg_return_true:
       }{
@@ -1672,7 +1669,7 @@
         }
       }{
         % Check for decimal separator
-        \token_if_eq_charcode:NtTF . { \tl_head:n { #1 } }
+        \subfiglist_str_if_eq:ntTF { . } { \tl_head:n { #1 } }
         {
           % Check if trailing end is an integer
           \subfiglist_is_integer:tTF { \tl_tail:n { #1 } }
@@ -1898,7 +1895,7 @@
     \tl_clear:N \subfiglist_tmpb_tl
     \seq_get_left:NNTF \subfiglist_spec_str_seq \subfiglist_tmpa_tl
     {
-      \token_if_eq_charcode:NVTF [ \subfiglist_tmpa_tl
+      \str_if_eq:nVTF { [ } \subfiglist_tmpa_tl
       {
         \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
         \seq_get_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
@@ -1906,7 +1903,7 @@
         {
           \bool_lazy_or_p:nn
             { \quark_if_no_value_p:N \subfiglist_tmpa_tl }
-            { \token_if_eq_charcode_p:NV ] \subfiglist_tmpa_tl }
+            { \str_if_eq_p:nV { ] } \subfiglist_tmpa_tl }
         }{
           \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
           \tl_put_right:NV \subfiglist_tmpb_tl \subfiglist_tmpa_tl
