--- a/subfiglist.tex
+++ b/subfiglist.tex
@@ -609,10 +609,10 @@ demonstrates. Default color is \texttt{.}\ (period) if not specified otherwise i
   \subfiglistfile{6}{figures/06.png}
   \subfiglistlabel
     [y=0pt,c=blue]
-    {1}{\label{foo}}
+    {2}{\label{foo}}
   \subfiglistlabel
     [y=0pt,c={{rgb,256:red,224}}]
-    {2}{\label{bar}}
+    {1}{\label{bar}}
   \subfiglistlabel
     [y=0pt,c={{rgb,1:green,.75}}]
     {3}{\label{baz}}
@@ -801,5 +801,15 @@ The automatic rescaling behavior of this approach depending on image size and as
 
 \section{Rough description of the algorithm}
 For every image~-- or more general for every ``object'' like  images, spaces or newlines~-- several properties like width, height, aspect ratio and others have to be saved. In any object oriented programming language this would probably be solved by writing a class, which can store the various properties in fields, and creating instances for any of the considered objects.
+
+\begin{figure}
+\begin{subfiglist}{{1\\2\\3}4}
+  \subfiglistfile[fc=red]{1}{figures/02.png}
+  \subfiglistfile[fc=red]{2}{figures/02.png}
+  \subfiglistfile[fc=red]{3}{figures/02.png}
+  \subfiglistfile{4}{figures/02.png}
+\end{subfiglist}
+\caption{asfd}
+\end{figure}
 
 \end{document}
